--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ ul
   border-radius: 0 25px 25px 0;
 }
 .filtretexteicon:hover > .filtretexte {
-  color: lightblue;
+  background-color: lightblue;
 }
 .filtretexteicon:hover > .filtreicon {
   color: white;
@@ -147,10 +147,13 @@ margin-right: 15%;
 .nonebordure{
   border: none;
 }
+.leftflex{
+  display: flex;
+  align-items: left;
+}
 
 .centreflex{
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
