--- a/main.css
+++ b/main.css
@@ -7,9 +7,6 @@ ul
   list-style-type: none;
   text-align: right;
 }
-.left{
-  align-items: left;
-}
 
 .centrericone{
   margin: auto;
@@ -67,11 +64,7 @@ ul
   margin-right: 20px;
 }
 .filtreicon{
-  border-radius: 25px;
-  width: 52px;
-  height: 52px;
   color: blue;
-  background-color: lightblue;
 }
 .filtretexte{
   height: 50px;
@@ -82,10 +75,7 @@ ul
 .filtretexteicon:hover > .filtretexte {
   background-color: lightblue;
 }
-.filtretexteicon:hover > .filtreicon {
-  color: white;
-  background-color: lightblue;
-}
+
 .flexinfo{
     display: flex;
   align-items: center;  
@@ -139,6 +129,10 @@ margin-right: 15%;
   border-radius: 10px;
   border: 0.5px solid lightgrey;
 }
+.left{
+  align-items: left;
+}
+
 
 .fontgris{
   background-color: lightgrey;
@@ -147,13 +141,16 @@ margin-right: 15%;
 .nonebordure{
   border: none;
 }
-.leftflex{
-  display: flex;
-  align-items: left;
-}
+
 
 .centreflex{
   display: flex;
+  align-items: center;
+}
+
+.centreflexx{
+  display: flex;
+  padding-left: 20px;
   align-items: center;
 }
 
@@ -248,6 +245,10 @@ margin-right: 15%;
 .boutonrecherche:hover{
   color: blue;
   background-color: lightgrey;
+  padding-top: 10px;
+}
+.paddingicone{
+  padding-left: 20px;
 }
 
 .gras{
