--- a/main.css
+++ b/main.css
@@ -7,10 +7,11 @@ ul
   list-style-type: none;
   text-align: right;
 }
-.cerclei{
-  color: lightgrey;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
+.cerclei {
+  height: 5px;
+  width: 5px;
+  background-color: #555;
+  border-radius: 0 10px 10px 0;
 }
 .bloccarte{
   display: flex;
@@ -81,7 +82,7 @@ ul
   padding-right: 20px;
   border-radius: 0 25px 25px 0;
 }
-.filtretexteicon:hover > .filtretexte {
+.filtretexteicon:hover > .filtretexte{
   background-color: lightblue;
 }
 
@@ -139,7 +140,7 @@ margin-right: 15%;
   border: 0.5px solid lightgrey;
 }
 .left{
-  align-items: left;
+  text-align: left;
 }
 
 
@@ -189,7 +190,7 @@ margin-right: 15%;
 }
 .leftt{
   display: flex;
-  flex-direction: ;
+  flex-direction:row ;
 }
 .autourcolonneflex{
   display: flex;
@@ -406,6 +407,9 @@ margin-top: 10px;
   border: 2px solid white;
   border-radius: 25px;
   margin-right: 5px;
+}
+.titreh2activité{
+  padding-bottom: 30px;
 }
 
 .activité{
