--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ ul
   padding-right: 20px;
   border-radius: 0 25px 25px 0;
 }
-.filtretexteicon:hover > .filtretexte{
+.filtretexteicon:hover{
   background-color: lightblue;
 }
 
