--- a/main.css
+++ b/main.css
@@ -2,10 +2,12 @@ html,body{
   font-family: Raleway;
 }
 
-ul
-{
-  list-style-type: none;
-  text-align: right;
+.container{
+  box-sizing: border-box;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  width: calc(100% - 40px);
 }
 .cerclei {
   height: 5px;
@@ -60,9 +62,14 @@ ul
 }
 .margeinfo{
   margin-right: 25px;
+  margin-bottom: 15px;
 }
 .borderinfo{
-
+  width: 20px;
+  height: 20px;
+  border: solid grey 60px;
+  border-radius: 100px;
+  border-width: thin;
 }
 .filtretexteicon{
   border: 2px solid lightgrey;
