--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ html,body{
 .borduregris {
 
   border: 1px solid lightgrey;
-  border-radius: 10px;
+  border-radius: 1px;
   padding: 5px;
 }
 
@@ -65,6 +65,7 @@ html,body{
   margin-right: 25px;
   margin-bottom: 1px;
 }
+
 .borderinfo{
   width: 20px;
   height: 20px;
@@ -129,20 +130,32 @@ margin-right: 15%;
 }
 
 .recherche{
-   display: flex;
+  display: flex;
   align-items: center;
   height: 50px;
   width: 230px;
   font-size: 18px;
   color: black;
   font-weight: bold;
-  
+}
+.boutonrecherche{
+  height: 50px;
+  width: 120px;
+  cursor: pointer;
+  border-radius: 0 10px 10px 0;
+}
+.boutonrecherche:hover{
+  color: blue;
+  background-color: lightgrey;
 }
 
 .bordurerecherche{
   width: 400px;
   border-radius: 10px;
   border: 0.5px solid lightgrey;
+}
+input::placeholder {
+  color: black;
 }
 .left{
   text-align: left;
@@ -156,6 +169,8 @@ margin-right: 15%;
 .nonebordure{
   border: none;
 }
+
+
 
 
 .centreflex{
@@ -251,16 +266,8 @@ margin-right: 15%;
   padding: 100px;
 }
 
-.boutonrecherche{
-  height: 50px;
-  width: 120px;
-  cursor: pointer;
-  border-radius: 0 10px 10px 0;
-}
-.boutonrecherche:hover{
-  color: blue;
-  background-color: lightgrey;
-}
+
+
 .paddingicone{
   padding-left: 20px;
 }
@@ -269,9 +276,7 @@ margin-right: 15%;
   font-weight: bold;
 }
 
-input::placeholder {
-  color: black;
-}
+
 
 .bloccarte{
   display: flex;
@@ -307,7 +312,10 @@ input::placeholder {
   margin-right: 860px;
 }
 .margeiconepopulaire{
-  margin-left: 200px;
+  margin-left: 400px;
+}
+.margepluspopulaire{
+  margin-right: 150px;
 }
 
 
@@ -446,7 +454,7 @@ gap: 30px;
 }
 .blocactivité{
   width: 100%;
-  height: 600px;
+  height: 700px;
   gap: 25px;
 }
 .blocactivité2{
@@ -479,7 +487,7 @@ gap: 30px;
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 530px;
+  height: 450px;
   border-radius: 15px 0 0 0;
 }
 
@@ -488,7 +496,7 @@ gap: 30px;
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 530px;
+  height: 450px;
   border-radius: 15px 0 0 0;
 }
 
@@ -497,7 +505,7 @@ gap: 30px;
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 530px;
+  height: 450px;
   border-radius: 15px 0 0 0;
 }
 
@@ -506,6 +514,10 @@ gap: 30px;
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 530px;
+  height: 450px;
   border-radius: 15px 0 0 0;
+}
+
+.iconeinfo{
+
 }
