--- a/main.css
+++ b/main.css
@@ -54,6 +54,15 @@ html,body{
 .margefiltretitre{
   margin-right: 20px;
 }
+.info{
+  display: flex;
+  align-items: center;
+}
+.iconeinfo{
+  display: flex !important; 
+  align-items: center;
+  justify-content: center;
+}
 .margeinfo{
   margin-right: 25px;
   margin-bottom: 1px;
@@ -424,10 +433,7 @@ gap: 30px;
 
 
 
-.info{
-  display: flex;
-  align-items: center;
-}
+
 
 .parenticon{
   width: 20px;
@@ -508,10 +514,4 @@ gap: 30px;
   width: 100%;
   height: 350px;
   border-radius: 15px 0 0 0;
-}
-
-.iconeinfo{
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
