--- a/main.css
+++ b/main.css
@@ -69,8 +69,8 @@ html,body{
 }
 
 .borderinfo{
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   border: solid grey 60px;
   border-radius: 100%;
   border-width: thin;
@@ -319,6 +319,11 @@ input::placeholder {
   margin-right: 185px;
 }
 
+.flexiconchart{
+  display: flex;
+  flex-direction: column;
+}
+
 
 .taillepopulaire{
   flex: 1;
@@ -333,12 +338,16 @@ input::placeholder {
 .blocpopulaire2{
   margin-bottom: 20px;
 }
+.flexpopulaire{
+  display: flex;
+  justify-content: space-between;
+}
 .cubepopulaire{
   background-color: white;
   height: auto;
   padding: 1% 0 1% 1%;
   border-radius: 20px;
-  width: 130%;
+  width: 100%;
 }
 .cubepopulairedetail{
   width: 60%;
@@ -411,7 +420,7 @@ gap: 30px;
   background-position: center;
   width: 35%;
   height: 160px;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px 0 0 15px;
 }
 
 .img8{
@@ -420,7 +429,7 @@ gap: 30px;
   background-position: center;
   width: 35%;
   height: 160px;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px 0 0 15px;
 }
 .img9{
   background-image: url("2e06273f1332a33d85b6f226363c31f1.jpeg");
@@ -445,13 +454,18 @@ gap: 30px;
 .titreh2activité{
   padding-bottom: 30px;
 }
-
+.centerblocactivité{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .activité{
   margin-top: 50px;
   margin-bottom: 50px ;
+
 }
 .blocactivité{
-  width: 100%;
+  width: 90%;
   height: 450px;
   gap: 25px;
 }
@@ -515,3 +529,4 @@ gap: 30px;
   height: 350px;
   border-radius: 15px 0 0 0;
 }
+
