--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@ html,body{
 }
 
 .footer{
-  height: 300px;
+  height: 240px;
   margin-top: 100px;
 }
 
@@ -301,7 +301,8 @@ input::placeholder {
 }
 .pluspopulaire{
   display: flex;
-  flex-direction:column ;
+  justify-content: space-between;
+  align-items: center;
 }
 .margetitrehebergement{
   margin-right: 720px;
@@ -465,9 +466,9 @@ gap: 30px;
 
 }
 .blocactivité{
-  width: 90%;
+  width: 100%;
   height: 450px;
-  gap: 25px;
+  gap: 35px;
 }
 .blocactivité2{
   width: 23%;
@@ -484,7 +485,7 @@ gap: 30px;
   box-shadow: 5px 5px 5px 5px lightgrey;
 }
 .heighttitre{
-  height: 70px;
+  height: 30px;
 }
 .titreactivité{
   display: flex;
