--- a/main.css
+++ b/main.css
@@ -501,7 +501,7 @@ gap: 30px;
   background-position: center;
   width: 100%;
   height: 350px;
-  border-radius: 15px 0 0 0;
+  border-radius: 15px 15px 0 0;
 }
 
 .img11{
@@ -510,7 +510,7 @@ gap: 30px;
   background-position: center;
   width: 100%;
   height: 350px;
-  border-radius: 15px 0 0 0;
+  border-radius: 15px 15px 0 0;
 }
 
 .img12{
@@ -519,7 +519,7 @@ gap: 30px;
   background-position: center;
   width: 100%;
   height: 350px;
-  border-radius: 15px 0 0 0;
+  border-radius: 15px 15px 0 0;
 }
 
 .img13{
@@ -528,6 +528,7 @@ gap: 30px;
   background-position: center;
   width: 100%;
   height: 350px;
-  border-radius: 15px 0 0 0;
+  border-radius: 15px 15px 0 0;
 }
+
 
